# exchange-data

./: .gitignore  README.md  api_doc.md  pyproject.toml
docs/: sqlite_data_dictionary.md
src/exchange_monitor/: __init__.py  logging_utils.py  main.py  run_state.py  service.py  stream_lighter.py  validation.py
src/exchange_monitor/clients/: __init__.py  http_client.py  lighter_client.py  omni_client.py
src/exchange_monitor/collectors/: __init__.py  lighter_collector.py  omni_collector.py  utils.py
src/exchange_monitor/db/: __init__.py  repository.py  schema.py
tests/: test_normalizers.py  test_repository.py  test_validation.py
