[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exchange-monitor"
version = "0.1.0"
description = "Public market data collectors for Omni and Lighter with SQLite storage"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["websockets>=12.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
